Added Devise like in the lesson. Seems to work try /listings and then sign up!

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,9 +9,9 @@
     <%= f.input :email, required: true %>
 
     <%# Passwortfelder optional anzeigen, je nach UX-Präferenz %>
-    <%= f.input :password, hint: "leer lassen, wenn unverändert" %>
+    <%= f.input :password, hint: "leave empty when unchanged" %>
     <%= f.input :password_confirmation %>
-    <%= f.input :current_password, hint: "erforderlich, um Änderungen zu bestätigen" %>
+    <%= f.input :current_password, hint: "needed to confirm changes" %>
   </div>
 
   <div class="form-actions">
