--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
   <body>
   <%= render "shared/flashes" %>
   <%= render "shared/navbar" %>
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
+  <%= render "shared/footer" %>
   </body>
 </html>
