--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,5 @@
 <p>Find me in app/views/pages/home.html.erb</p>
 
 <div style="height: 2000px; background: linear-gradient(180deg, #f9f9f9 0%, #ffffff 100%); display: flex; align-items: center; justify-content: center; color: #717171; font-size: 1.5rem;">
-  Scroll down to test the navbar
+  Scroll down to test navbar
 </div>
