Refactor navbar: add Stimulus controller, improve scroll behavior, blur + hover effects, fix stable animation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,13 +15,15 @@
 
 html, body {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   margin: 0;
 }
 
-body > main,
-body > .container,
-body > .wrapper {
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.page-wrapper main {
   flex: 1;
 }
