--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
   </head>
 
   <body>
-  <%= render "shared/flashes" %>
-  <%= render "shared/navbar" %>
-    <main>
-      <%= yield %>
-    </main>
-  <%= render "shared/footer" %>
+    <%= render "shared/flashes" %>
+    <div class="page-wrapper">
+      <%= render "shared/navbar" %>
+      <main><%= yield %></main>
+    </div>
+    <%= render "shared/footer" %>
   </body>
 </html>
