Update avatar placeholder image and edit profile view to use 847969.png

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
           <%= image_tag resource.photo.variant(resize_to_fill: [120, 120]), class: "avatar-preview" %><br>
           <small>Current profile photo</small>
         <% else %>
-          <%= image_tag "pngtree-user-avatar-placeholder-black-png-image_3918427.jpg", class: "avatar-preview" %><br>
+          <%= image_tag "847969.png", class: "avatar-preview" %><br>
           <small>No profile photo yet</small>
         <% end %>
       </div>
