--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,8 +41,8 @@
           <input type="text" placeholder="Add guests">
           <button class="search-btn" type="submit">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 
-              1.415-1.414l-3.85-3.85zm-5.242 0a5 5 0 1 1 
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0
+              1.415-1.414l-3.85-3.85zm-5.242 0a5 5 0 1 1
               0-10 5 5 0 0 1 0 10z"/>
             </svg>
           </button>
@@ -50,7 +50,7 @@
       </div>
     </form>
 
-    <div class="mini-search-bar">
+    <div class="mini-search-bar" data-action="mousedown->navbar#expandMiniSearch">
       <div class="mini-left">
         <img src="https://cdn-icons-png.flaticon.com/512/69/69524.png" alt="home icon">
         <span>Anywhere</span>
@@ -61,8 +61,8 @@
       <span>Add guests</span>
       <button class="mini-search-btn">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 
-          1.415-1.414l-3.85-3.85zm-5.242 0a5 5 0 1 1 
+          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0
+          1.415-1.414l-3.85-3.85zm-5.242 0a5 5 0 1 1
           0-10 5 5 0 0 1 0 10z"/>
         </svg>
       </button>
@@ -70,5 +70,3 @@
 
   </div>
 </nav>
-
-
