--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,6 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+@import "components/listing_show_reviews";
+@import "components/user_show_profile_reviews"
