--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Listings#show</h1>
 <p>Find me in app/views/listings/show.html.erb</p>
+
+
+<%= render partial: "listings/reviews/listings_reviews_show",
+           locals: { listing: @listing, reviews: @reviews, avg_rate: @avg_rate } %>
