--- a/app/views/listings/reviews/_listings_reviews_show.html.erb
+++ b/app/views/listings/reviews/_listings_reviews_show.html.erb
@@ -14,7 +14,33 @@
         <span class="star <%= i <= filled ? 'filled' : 'empty' %>">★</span>
       <% end %>
     </div>
+
+
+
+    <div class="mt-3">
+      <%= link_to "Create review",
+                  "#new-review",
+                  class: "btn btn-outline-primary",
+                  data: { bs_toggle: "collapse" },
+                  role: "button",
+                  aria_controls: "new-review",
+                  aria_expanded: "false" %>
+    </div>
+
+    <!-- Collapsible Form -->
+    <div id="new-review" class="collapse mt-3">
+      <%= render partial: "listings/reviews/review_create_form",
+                 locals: { listing: @listing, review: @review } %>
+    </div>
   </div>
+
+
+
+
+
+
+
+
 
   <div class="grid">
     <% @reviews.each do |review| %>
