--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,2 +1,8 @@
 <h1>Listings#show</h1>
 <p>Find me in app/views/listings/show.html.erb</p>
+
+
+
+<%= render "listings/geocoding/map_with_marker",
+           markers: @markers,
+           mapbox_api_key: ENV["MAPBOX_API_KEY"] %>
