--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,9 +10,17 @@
       <%= f.input :email, required: true %>
 
       <div class="mb-3">
-        <% if resource.photo.attached? %>
-          <%= image_tag resource.photo.variant(resize_to_fill: [120, 120]), class: "avatar-preview" %><br>
-          <small>Current profile photo</small>
+        <% if resource.persisted? && resource.photo.attached? %>
+          <% begin %>
+            <% # Use Cloudinary URL directly (no variant processing to avoid SSL issues) %>
+            <% image_url = resource.photo.url.sub('/upload/', '/upload/c_fill,h_120,w_120/') %>
+            <%= image_tag image_url, class: "avatar-preview" %><br>
+            <small>Current profile photo</small>
+          <% rescue => e %>
+            <% Rails.logger.error("Avatar display error: #{e.message}") %>
+            <%= image_tag "847969.png", class: "avatar-preview" %><br>
+            <small>No profile photo yet</small>
+          <% end %>
         <% else %>
           <%= image_tag "847969.png", class: "avatar-preview" %><br>
           <small>No profile photo yet</small>
