--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,8 +14,12 @@
       </div>
 
       <div class="navbar-right">
-        <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
-        <%= link_to "Sign up", new_user_registration_path, class: "nav-link signup" %>
+        <% if user_signed_in? %>
+          <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
+        <% else %>
+          <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Sign up", new_user_registration_path, class: "nav-link signup" %>
+        <% end %>
       </div>
     </div>
 
