--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "components/listing_show_reviews";
 @import "components/user_show_profile_reviews";
 @import "components/listing_show_booking_request";
+@import "components/bookings_made_by_Yourself_card";
 
 // Geocoding
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
