--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,12 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
-
-
 <h1>Profile page of <%= [@user.first_name, @user.last_name].compact.join(" ") %></h1>
+
+<h2>Your Bookings</h2>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4">
+  <%= render partial: "users/bookings_made_by_yourself/bookings_made_by_yourself_card",
+             collection: @bookings,
+             as: :booking %>
+</div>
+
 
 <%= render partial: "users/reviews/review_section",
            locals: { user: @user, reviews: @reviews, avg_rate: @avg_rate } %>
